# public

./: .gitignore  Anna_blocks.py  blocks.py
celery-rabbit-example/celery_config/: app_celery.py
celery-rabbit-example/config/: .env
examples/celery-rabbit-example/: Dockerfile  README.md  docker-compose.yml  my_app.py  requirements.txt
examples/celery_progress_demo/: db.sqlite3  (+2 more)
github-stars/: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
github-stars/config/: .env  .env.expample
github-stars/docker/: docker-compose.prod.yml
github-stars/docker/django/: Dockerfile  gunicorn.sh
github-stars/server/: urls.py
github-stars/server/apps/main/: admin.py  celery_config.py  commands.py  forms.py  views.py
github-stars/server/apps/main/management/commands/: create_superuser.py
github-stars/server/apps/main/migrations/: 0002_alter_blogpost_id.py  0003_alter_blogpost_id.py  0004_alter_blogpost_id.py  0005_alter_blogpost_id.py  0006_alter_blogpost_id.py  0007_alter_blogpost_id.py
github-stars/server/apps/main/static/celery_progress/: celery_progress.js
github-stars/server/apps/main/templates/: base.html  download.html  progress.html
github-stars/server/apps/main/templates/django_registration/: registration_form.html
github-stars/server/apps/main/templates/main/: github.html  github_result.html
github-stars/server/apps/main/templates/txt/: humans.txt
github-stars/server/settings/components/: __init__.py  common.py  email.py
github-stars/server/settings/environments/: development.py
new-github-repos/: .gitignore  docker-compose.yml  pyproject.toml
(+14 files in other folders)
