[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]


[tool.poetry]
name = "github-repos"
description = "github repos"
version = "0.1.0"
readme = "README.md"
authors = ["balsh"]


[tool.poetry.dependencies]
python = "^3.10.4"
django = "^4.0"
django-split-settings = "^1.1"
django-axes = "^5.5"
django-csp = "^3.7"
django-health-check = "^3.16"
django-http-referrer-policy = "^1.1"
django-permissions-policy = "^4.12"
django-stubs-ext = "^0.4"
django-registration = "^3.3"

psycopg2-binary = "^2.9"
gunicorn = "^20.1"
python-decouple = "^3.6"
bcrypt = "^3.2"
structlog = "^21.5"
celery = "^5.2"
flower = "^1.1"
celery_progress = "^0.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^3.5"
django-querycount = "^0.7"
django-migration-linter = "^3.0"
django-extra-checks = "^0.11"
django-coverage-plugin = "^2.0"
nplusone = "^1.0"

wemake-python-styleguide = "^0.*"
flake8-pytest-style = "^1.6"
flake8-django = "^1.1"
flake8-logging-format = "^0.6"
nitpick = "^0.32"

pytest = "^6.2"
pytest-django = "^4.5"
pytest-cov = "^2.12"
pytest-randomly = "^3.12"
pytest-deadfixtures = "^2.2"
pytest-testmon = "^1.3"
pytest-timeout = "^1.4"
django-test-migrations = "^1"
hypothesis = "^6.50"

mypy = "^0.961"
django-stubs = "^1.12"

sphinx = "^4.0"
sphinx-autodoc-typehints = "^1"
tomlkit = "^0.11"
doc8 = "^0.11"

yamllint = "^1"
safety = "^2.0"
dotenv-linter = "^0.3"
polint = "^0.4"
dennis = "^1.1"
dump-env = "^1.3"
ipython = "^8.4"
